# quai-gpu-miner

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Dockerfile  Dockerfile.build  Dockerfile.run  README.md  build-release.yml  deploy_miner.sh  miner_deploy_script.sh  miner_start_farm.sh  ubuntu_deploy_script.sh
.github/: CODEOWNERS
.github/workflows/: build-release.yml  build-runtime.yml
cmake/Hunter/: config.cmake
hiveos_packager/: h-manifest.conf  h-run.sh
hiveos_packager_amd/: h-manifest.conf  h-run.sh
hiveos_packager_nvidia/: h-manifest.conf  h-run.sh
kawpowminer/: CMakeLists.txt  main.cpp
libapicore/: ApiServer.cpp  ApiServer.h
libdevcore/: vector_ref.h
libethash/: ethash.cpp  progpow.cpp
libethash-cl/: CLMiner.cpp  CLMiner_kernel.cl
libethash-cuda/: CMakeLists.txt  CUDAMiner.cpp  CUDAMiner_kernel.cu  ethash_cuda_miner_kernel.cu
libethash/ethash/: ethash.h  progpow.hpp
libethcore/: EthashAux.cpp  Farm.cpp  Farm.h
libpoolprotocols/: CMakeLists.txt
libpoolprotocols/getwork/: EthGetworkClient.cpp
libpoolprotocols/stratum/: EthStratumClient.cpp  EthStratumClient.h
libprogpow/: ProgPow.cpp  ProgPow.h
